fix(design): contact form vertical alignemnts

--- a/styles/contact.module.scss
+++ b/styles/contact.module.scss
@@ -32,7 +32,6 @@
     @media (min-width: 600px) {
       > div {
         flex-direction: column;
-        justify-content: center;
       }
   
       h2 {
@@ -45,7 +44,6 @@
     @media (min-width: 1300px) {
       > div {
         flex-direction: column;
-        justify-content: center;
       }
   
       h2 {
@@ -59,6 +57,8 @@
   width: 100%;
   align-items: flex-start;
   text-align: left;
+  justify-content: flex-start;
+  min-height: 600px;
 
   @media (min-width: 800px) {
     max-width: 550px;
